--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "boilerplate/python_vscode_setup/kozubenko"]
 	path = boilerplate/python_vscode_setup/kozubenko
 	url = https://github.com/staspk/Python.git
+	branch = main
