--- a/boilerplate/python_vscode_setup/.vscode/launch.json
+++ b/boilerplate/python_vscode_setup/.vscode/launch.json
@@ -1,10 +1,20 @@
 {
+    "version": "0.2.0",
     "configurations": [
         {
             "name": "Python: Debug main.py",
             "type": "debugpy",
+            "python": "${workspaceFolder}/.venv/Scripts/python.exe",
             "request": "launch",
             "program": "${workspaceFolder}/main.py",
+            "justMyCode": true
+        },
+        {
+            "name": "Python: Debug test.py",
+            "type": "debugpy",
+            "python": "${workspaceFolder}/.venv/Scripts/python.exe",
+            "request": "launch",
+            "program": "${workspaceFolder}/test.py",
             "justMyCode": true
         }
     ]
